[gd_scene load_steps=5 format=3 uid="uid://beyloroiptsm0"]

[ext_resource type="Script" path="res://unit_creation_menu.gd" id="1_37jiy"]
[ext_resource type="Theme" uid="uid://dmc0x8nty1vom" path="res://PACTS theme.tres" id="1_iw838"]
[ext_resource type="Texture2D" uid="uid://dueawygyutvcp" path="res://Game Assets/UI ASSETS/PACTS UNIT CREATION TEMP.png" id="2_uom58"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v446e"]

[node name="Unit creation menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37jiy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_iw838")
theme_override_styles/panel = SubResource("StyleBoxEmpty_v446e")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_uom58")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_iw838")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="UnitClassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="InfantrySubclassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MechanizedInfantrySubclassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ArmorSubclassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ArtillerySubclassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MechSubclassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="AirSubclassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="OrbitalSubclassDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1250, 714)
zoom = Vector2(0.775, 0.775)
